play around with mode
- test mode in jupyter notebook

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -105,66 +105,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "c1b0a20c-6603-4e9d-ac22-6718550a7bbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modes import *"
+    "from modes import Mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ee9279bf-4ad8-47f9-bbac-723126caab1a",
+   "execution_count": 15,
+   "id": "14059e35-856e-49af-bd4a-3f14258f3551",
    "metadata": {},
    "outputs": [],
    "source": [
-    "key = 64\n",
-    "# brighter to darker\n",
-    "for mode in [lydian, mixolydian, dorian, aeolian, phrygian, locrian]:\n",
-    "    for note in mode(key):\n",
-    "        outport.send(Message(\"note_on\", note = note, velocity = 64))\n",
-    "        time.sleep(0.1)\n",
-    "        outport.send(Message(\"note_off\", note = note, velocity = 64))\n",
-    "    time.sleep(1)"
+    "modes = Mode(key = 64)\n",
+    "\n",
+    "lydian = modes.lydian()\n",
+    "ionian = modes.ionian()\n",
+    "mixolydian = modes.mixolydian()\n",
+    "dorian = modes.dorian()\n",
+    "aeolian = modes.aeolian()\n",
+    "phrygian = modes.phrygian()\n",
+    "locrian = modes.locrian()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "c07c5473-4f9d-4aad-b33e-c9182693b93b",
    "metadata": {},
    "outputs": [],
    "source": [
     "key = 64\n",
+    "\n",
     "# brighter to darker\n",
-    "for mode in [lydian, mixolydian, dorian, aeolian, phrygian, locrian]:\n",
-    "    for note in mode(key):\n",
+    "for mode in [lydian, ionian, mixolydian, dorian, aeolian, phrygian, locrian]:\n",
+    "    for note in mode:\n",
     "        outport.send(Message(\"note_on\", note = note, velocity = 64))\n",
     "        time.sleep(0.1)\n",
     "        outport.send(Message(\"note_off\", note = note, velocity = 64))\n",
-    "    for note in mode(key):\n",
-    "        octave_semitones = 12\n",
-    "        outport.send(Message(\"note_on\", note = note + octave_semitones, velocity = 64))\n",
-    "        time.sleep(0.1)\n",
-    "        outport.send(Message(\"note_off\", note = note + octave_semitones, velocity = 64))\n",
-    "    for note in mode(key):\n",
-    "        octave_semitones = 12\n",
-    "        outport.send(Message(\"note_on\", note = note + octave_semitones * 2, velocity = 64))\n",
-    "        time.sleep(0.1)\n",
-    "        outport.send(Message(\"note_off\", note = note + octave_semitones * 2, velocity = 64))\n",
+    "\n",
+    "    outport.send(Message(\"note_on\", note = key + 12, velocity = 64))\n",
+    "    time.sleep(0.4)\n",
+    "    outport.send(Message(\"note_off\", note = key + 12, velocity = 64))\n",
     "\n",
     "    time.sleep(1)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f37ff92-c6bd-4b3b-af9e-2404efce3135",
+   "metadata": {},
+   "source": [
+    "# play chords"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c27eda34-134b-4538-9246-fc1f7cc25ee6",
+   "execution_count": 43,
+   "id": "02356b4d-f258-47f5-844b-6a101b8525cf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def play_chords(notes: list[int]) -> None:\n",
+    "    for note in notes:\n",
+    "        outport.send(Message(\"note_on\", note = note, velocity = 64))\n",
+    "    time.sleep(1)\n",
+    "    for note in notes:\n",
+    "        outport.send(Message(\"note_off\", note = note, velocity = 64))\n",
+    "\n",
+    "play_chords(ionian[0:3:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "27b5bcd4-7249-477d-8628-7773f7201f20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = 0\n",
+    "play_chords([ionian[index], ionian[index + 2], ionian[index + 4]])\n",
+    "index = 1\n",
+    "play_chords([ionian[index], ionian[index + 2], ionian[index + 4]])\n",
+    "index = 0\n",
+    "play_chords([ionian[index], ionian[index + 2], ionian[index + 4]])"
+   ]
   }
  ],
  "metadata": {
